<resources>
    <string name="app_name">s40 Humanitarian App</string>
    <string name="short_app_name">s40</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_no_matching_password">These passwords do not match</string>
    <string name="error_field_required">This field is required</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string name="shipments">Shipments</string>
    <string name="people">People</string>
    <string name="locations">Locations</string>
    <string name="checklists">Checklists</string>
    <string name="notes" translatable="false">Notes</string>
    <string name="projects">Projects</string>
    <string name="groups">Groups</string>
    <string name="to">To: </string>
    <string name="from">From: </string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="lastLoc">Last Known Location:</string>
    <string name="myLoc">My Location</string>
    <string name="action_call">Call</string>
    <string name="action_text">Text</string>
    <string name="save">Save</string>
    <string name="lastMod">Last Modified:</string>
    <string name="addPerson">Add a new Person:</string>
    <string name="addProject">Add a new Project:</string>
    <string name="addGroup">Add a new Group:</string>
    <string name="addLocation">Add a new Location:</string>
    <string name="addChecklist">Add a new Checklist:</string>
    <string name="addNewChecklistItem">Add Item</string>
    <string name="addNewSublistItem">Add Subitem</string>
    <string name="addShipment">Add a new Shipment:</string>
    <string name="item">Item</string>
    <string name="subitem">Subitem</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="welcome">Welcome to Gitkit Demo</string>
    <string name="sign_in_label">Sign in</string>
    <string name="sign_up_label">Sign up</string>
    <string name="manage_account_label">Manage account</string>
    <string name="sign_out_label">Sign out</string>
    <string name="addNote">Add a new Note</string>
    <string name="saveChanges">Save Changes</string>
    <string name="chooseDate">Choose Date</string>
    <string name="chooseTime">Choose Time</string>
    <string name="chooseLocations">Choose Locations</string>
    <string name="showHiddenItems">Show Hidden Items</string>
    <string name="hideHiddenItems">Hide Hidden Items</string>
    <string name="title_activity_login">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="send">Send</string>
    <string name="threads" translatable="false">Message Threads</string>
    <string name="signed_out" translatable="false">Signed out</string>
    <string name="sign_out">Sign out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_in_fmt" translatable="false">Signed in:   </string>
    <string name="loading">Loading...</string>
    <string name="mapShowText">Show on map</string>
    <string name="toManSync">Switch to manual sync</string>
    <string name="toAutoSync">Switch to automatic sync</string>
    <string name="forceSync">Sync</string>
    <string name="noneFound" translatable="false">No %1$s found</string>
    <string name="newUser">Complete Sign Up</string>
    <string name="idNumber">Person ID: </string>
    <string name="check">Check</string>
    <string name="email_label" translatable="false">Email: </string>
    <string name="name_label" translatable="false">Name: </string>
    <string name="personDNE">No such person.</string>
    <string name="makeMessage" translatable="false">Add new message Thread</string>
    <string name="helpURL">The URL associated with the server for your organisation. For example: s40server.csse.rose-hulman.edu</string>
    <string name="search">Search</string>
    <string name="editMembers">Edit Members</string>
    <string name="phone">Phone</string>
    <string name="email" translatable="false">Email</string>
    <string name="name" translatable="false">Name</string>
    <string name="badURL">This address is acceptable, however, because it is not an https connection, we cannot guarantee the security of your data. You should ask your supervisor for more information.</string>
    <string name="acceptBadURL">I understand, continue using this address.</string>
    <string name="rejectBadURL">Change address.</string>
    <string name="serverColon">Server:</string>
    <string name="localColon">Local:</string>
    <string name="server">Server</string>
    <string name="local">Local</string>
    <string name="other">Other</string>
    <string name="choose_other">Other Value</string>
    <string name="changedVersion">Changed Version:</string>
    <string name="changeURL">Change URL</string>
    <string name="go">Go</string>
</resources>

