<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/hideButton"
        android:orderInCategory="200"
        android:title="Hide"
        android:icon="@drawable/ic_visibility_off_white_48dp"
        app:showAsAction="always"
        ></item>
    <item
        android:id="@+id/forceSync"
        android:orderInCategory="700"
        android:title="@string/forceSync"
        app:showAsAction="always"
        ></item>

    <item
        android:id="@+id/editButton"
        android:orderInCategory="300"
        android:title="Edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/addButton"
        android:orderInCategory="400"
        android:title="Add"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/button2"
        android:orderInCategory="500"
        android:title="Check in"
        android:icon="@drawable/ic_menu_mylocation"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/switchSync"
        android:orderInCategory="600"
        android:title="@string/toManSync"
        app:showAsAction="never"
        ></item>
    <item
        android:id="@+id/showHiddenButton"
        android:orderInCategory="200"
        android:title="@string/showHiddenItems"
        app:showAsAction="never"
        ></item>

    <item
        android:id="@+id/logout"
        android:orderInCategory="700"
        android:title="Log out"
        app:showAsAction="never"
        ></item>
</menu>
