<?xml version="1.0" encoding="utf-8"?>
   <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/to"
            android:id="@+id/textView10"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toSpinner"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/fromSpinner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/from"
            android:id="@+id/textView11"
            android:layout_gravity="center_vertical"
            android:layout_alignTop="@+id/fromSpinner"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fromSpinner"
            android:layout_weight="1"
            android:layout_below="@+id/toSpinner"
            android:layout_toEndOf="@+id/textView11" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseDate"
        android:id="@+id/dateButton"
        android:layout_below="@+id/fromSpinner"
        android:layout_centerHorizontal="true" />


</RelativeLayout>

