<LinearLayout
    android:background="@drawable/martian4"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/main_layout" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:weightSum="4" tools:context="edu.rose_hulman.srproject.humanitarianapp.LoginActivity">
    <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="3" android:gravity="center_horizontal" android:orientation="vertical">
        <ImageView android:id="@+id/google_icon" android:layout_width="48dp" android:layout_height="48dp" android:layout_marginBottom="10dp" android:layout_marginTop="10dp" android:src="@mipmap/ic_launcher"/>
        <TextView android:id="@+id/title_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/title_activity_login" android:gravity="center" android:textColor="@android:color/black" android:textSize="36sp"/>
        <TextView android:id="@+id/status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/signed_out" android:textColor="@android:color/black" android:textSize="14sp"/>
        <TextView android:id="@+id/detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fadeScrollbars="true" android:gravity="center" android:maxLines="5" android:padding="10dp" android:scrollbars="vertical" android:textColor="@android:color/black" android:textSize="14sp"/>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HMA"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            style="@style/Platform.V11.AppCompat.Light" />
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0dp" android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.gms.common.SignInButton android:id="@+id/sign_in_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" android:visibility="visible" tools:visibility="gone"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/changeURLButton" />
        </LinearLayout>

        <LinearLayout android:id="@+id/sign_out_and_disconnect" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" android:orientation="horizontal" android:paddingLeft="16dp" android:paddingRight="16dp" android:visibility="gone" tools:visibility="visible">
            <Button android:id="@+id/sign_out_button" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/sign_out"/>
            <Button android:id="@+id/go_button" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="Go"/>
            <Button android:id="@+id/disconnect_button" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/disconnect"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>