<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.rose_hulman.srproject.humanitarianapp.controllers.data_fragments.ShipmentFragment"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView9"
        android:text="@string/addShipment" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/titleField"
        android:hint="Name"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/contentsField"
        android:hint="Contents"
        android:layout_gravity="center_horizontal" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/to"
            android:id="@+id/textView2"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"

            android:id="@+id/dateLabel"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_row="0"
            android:layout_column="4"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/from"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"

            android:id="@+id/toLabel"
            android:layout_toEndOf="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"

            android:id="@+id/fromLabel"
            android:layout_alignBottom="@+id/textView3"
            android:layout_toEndOf="@id/textView3"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/date"
            android:id="@+id/textView4"

            android:layout_toStartOf="@id/dateLabel"
            android:layout_alignParentStart="false"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/time"
            android:id="@+id/textView5"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textView4"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"

            android:id="@+id/timeLabel"
            android:layout_row="1"
            android:layout_column="4"
            android:layout_marginBottom="15dp" />
    </GridLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabLayout"></FrameLayout>


</LinearLayout>